# SSD_APP

./: LICENSE  README.md  SSD.spec  TUTORIAL.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml  test.yml
ssdiff_gui/: __init__.py  logo.py  main.py  theme.py
ssdiff_gui/controllers/: __init__.py  ssd_runner.py
ssdiff_gui/models/: __init__.py  project.py
ssdiff_gui/resources/: icon.icns
ssdiff_gui/utils/: __init__.py  artifact_registry.py  charts.py  display_limits.py  file_io.py  linux_install.py  paths.py  progress.py  report_settings.py  result_export.py  save_config.py  settings.py  validators.py  worker_threads.py
ssdiff_gui/views/: __init__.py  _pair_view.py  appearance_dialog.py  main_window.py  report_settings_dialog.py  save_settings_dialog.py  settings_dialog.py  stage1_setup.py  stage2_concept.py  stage3_results.py  tutorial_dialog.py
tests/: conftest.py  test_artifact_registry.py  test_defaults_sync.py  test_file_io.py  test_group_detail_html.py  test_pair_view.py  test_pipeline_roundtrip.py  test_project_model.py  test_replication_script.py  test_result_export.py  test_save_config.py  test_ssd_runner.py  test_stats_strip.py  test_tab_visibility.py  test_validators.py
tests/integration/: conftest.py  test_continuous_detail_html.py  test_pipeline_roundtrip.py  test_result_export.py  test_run_multipls_smoke.py  test_stage3_delete.py
tests/unit/: test_artifact_registry.py  test_charts.py  test_defaults_sync.py  test_group_detail_html.py  test_html_helpers.py  test_imports.py  test_platform_paths.py  test_project_io.py  (+9 more)
(+21 files in other folders)
